Fixed heights of images in article row so align script will run correctly.

--- a/app/assets/stylesheets/site/containers/article-row.css.sass
+++ b/app/assets/stylesheets/site/containers/article-row.css.sass
@@ -13,6 +13,7 @@
     img
       margin-bottom: 5px
       width: 100%
+      height: 109px
       display: block
       +black-box-shadow($default-box-shadow-opacity, 0px, 0px, 4px)
       +border-radius($corner-radius)
@@ -34,6 +35,9 @@
 
   .row-article.feature
     width: 314px
+
+    img
+      height: 188px
 
     .title
       font-size: 1.6em
